# SC4020-Project1

./: pyproject.toml
img_search/config/database/: embeddings.yaml
img_search/database/: embeddings.py
tests/database/: test_embedding_database.py
